infra/K8s/base/api-gateway/api-gateway-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-internal
  namespace: trading-platform
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
