infra/K8s/base/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: trading-platform
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/health-check-path: "/health"
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default": "api-gateway-backendconfig"}'
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
