infra/K8s/base/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: trading-platform
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: api-gateway-cert
spec:
  rules:
    - host: api.globalquantx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
